--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-runtime": "6.18.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^4.0.0-alpha.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
