--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-runtime": "6.18.0",
     "meteor-node-stubs": "~0.2.0",
+    "re-base": "^2.5.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^4.0.0-alpha.5"
